# BDTK

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cider-velox/test/: AggWithRandomDataTest.cpp  ArrowUtilsTest.cpp  CMakeLists.txt  CiderDataTypeTest.cpp  CiderHashJoinTest.cpp  CiderOperatorCompareOpTest.cpp  CiderOperatorHashJoinTest.cpp  CiderOperatorJoinTest.cpp  CiderOperatorTest.cpp  CiderOperatorTestBase.h  CiderPatternTest.cpp  CiderScalarFunctionTest.cpp  DataConvertorTest.cpp  RangedBatchGenerator.h
cider-velox/test/SubstraitTest/: CMakeLists.txt  SubstraitVeloxPlanConverterTest.cpp  VeloxPlanFragmentSubstraitConverterTest.cpp
cider-velox/test/expression/: CiderComparisonConjunct.cpp  CiderSimpleArithmetic.cpp  ExprEvalUtils.cpp  ExprEvalUtils.h  VeloxToCiderExpr.cpp
cider-velox/test/planTransformerTest/: CMakeLists.txt  CiderCompoundJoinMixedTest.cpp  CiderCompoundPatternTest.cpp  CiderLeftDeepJoinPatternTest.cpp  CiderPatternJoinMixedTest.cpp  CiderPatternKeepOrginalRewriterTest.cpp  CiderPatternNullptrRewriterTest.cpp  CiderPlanTransformerIncludes.h  FilterProjectNullPtrRewriterTest.cpp  FilterProjectSwapTest.cpp  InvalidPlanPatternTest.cpp
cider/common/contrib/: CMakeLists.txt
cider/exec/module/: CMakeLists.txt  CiderCompilationResultImpl.h  CiderCompileModule.cpp  CiderExprEvaluator.cpp  CiderExprEvaluator.h  CiderOptions.cpp  CiderRuntimeModule.cpp  CiderTypes.cpp
cider/exec/template/: AggregateUtils.h  AggregatedColRange.h  ArithmeticIR.cpp  ArrayIR.cpp  AutomaticIRMetadataGuard.h  BitmapGenerators.h  BufferEntryUtils.h  CMakeLists.txt  CacheInvalidator.h  CardinalityEstimator.cpp  CardinalityEstimator.h  CartesianProduct.h  CaseIR.cpp  CastIR.cpp  CgenState.cpp  CgenState.h  CodeCache.h  CodeGenerator.h  Codec.cpp  Codec.h  CodegenColValues.h  ColumnFetcher.cpp  ColumnIR.cpp  ColumnarResults.cpp  ColumnarResults.h  CompareIR.cpp  CompareKeysInl.h  CompilationOptions.h  ConstantIR.cpp  CountDistinct.h  DateTimeIR.cpp  DateTimeTranslator.cpp  DateTimeTranslator.h  DateTimeUtils.h  DeepCopyVisitor.h  ErrorHandling.h  Execute.cpp  Execute.h  ExpressionRange.cpp  ExpressionRewrite.cpp  (+36 more)
cider/function/: CMakeLists.txt  ExtensionFunction.cpp  ExtensionFunction.h  ExtensionFunctionsBinding.cpp  ExtensionFunctionsBinding.h  ExtensionFunctionsWhitelist.cpp  ExtensionFunctionsWhitelist.h  FunctionHelper.h  FunctionLookup.cpp  FunctionLookup.h  FunctionLookupEngine.cpp  FunctionLookupEngine.h  SubstraitFunctionCiderMappings.h  SubstraitFunctionMappings.h
cider/function/aggregate/: CiderRuntimeFunctions.h  GroupByRuntime.cpp
cider/function/datetime/: DateAdd.cpp  DateTruncate.cpp  ExtractFromTime.cpp  ExtractFromTime.h
cider/function/extensions/: BasicFunctionLookUpContext.cpp  BasicFunctionLookUpContext.h  PrestoFunctionLookUpContext.cpp  PrestoFunctionLookUpContext.h  SubstraitFunctionLookUpContext.cpp  SubstraitFunctionLookUpContext.h
cider/function/hash/: MurmurHash.h  MurmurHash3Inl.h
cider/function/internals/: functions_arithmetic.yaml  functions_comparison.yaml  functions_datetime.yaml  functions_string.yaml
cider/function/scalar/: DecodersImpl.h  ExtensionFunctions.hpp  ExtensionFunctionsArray.hpp  RuntimeFunctions.cpp  RuntimeFunctions.h  TopKRuntime.cpp
cider/function/string/: StringOpInfo.cpp  StringOpInfo.h  StringOps.cpp  StringOps.h
cider/function/substrait/: CMakeLists.txt  SubstraitExtension.cpp  SubstraitExtension.h  SubstraitFunction.cpp  SubstraitFunction.h  SubstraitFunctionLookup.cpp  SubstraitFunctionLookup.h  SubstraitFunctionMappings.h  SubstraitSignature.cpp  SubstraitSignature.h  SubstraitType.cpp  SubstraitType.h  VeloxToSubstraitMappings.h
cider/tests/plan/: CMakeLists.txt  CiderPlanValidatorTest.cpp
cider/tests/utils/: ArrowArrayBuilder.h  ArrowArrayBuilderTest.cpp  CMakeLists.txt  CiderBatchBuilder.h  CiderBatchBuilderTest.cpp  CiderBatchChecker.cpp  CiderBatchChecker.h  CiderBatchCheckerTest.cpp  CiderBatchStringifier.cpp  CiderBatchStringifier.h  CiderBenchmarkRunner.cpp  CiderBenchmarkRunner.h  CiderInt128.cpp  CiderInt128.h  CiderInt128Test.cpp  CiderMultiBatchTest.cpp  CiderQueryRunner.cpp  CiderQueryRunner.h  CiderQueryRunnerTest.cpp  CiderRunner.cpp  CiderRunner.h  CiderRunnerTest.cpp  CiderTestBase.cpp  CiderTestBase.h  DuckDbArrowAdaptor.cpp  DuckDbArrowAdaptor.h  DuckDbQueryRunner.cpp  DuckDbQueryRunner.h  DuckDbQueryRunnerTest.cpp  QueryArrowDataGenerator.h  QueryArrowDataGeneratorTest.cpp  QueryDataGenerator.h  QueryDataGeneratorTest.cpp  Utils.cpp  Utils.h
cider/type/plan/: Analyzer.cpp  Analyzer.h  Analyzer2.cpp  BinaryExpr.cpp  BinaryExpr.h  CMakeLists.txt  ColumnExpr.cpp  ColumnExpr.h  ConstantExpr.cpp  ConstantExpr.h  Expr.cpp  Expr.h  LikeExpr.cpp  LikeExpr.h  UnaryExpr.cpp  UnaryExpr.h
cpp/: CMakeLists.txt
cpp/cmake-modules/: BuildUtils.cmake  igzip.cmake  substrait-cpp.cmake  substrait.cmake
cpp/resource/: 0001-Add-ICL-support.patch
cpp/src/cider/: CMakeLists.txt
cpp/src/cider-velox/: CMakeLists.txt
cpp/src/cider/util/: Datum.h  (+57 more)
cpp/src/compression/: CMakeLists.txt
src/cider-velox/benchmark/: CMakeLists.txt  CiderOperatorBenchmark.cpp
src/cider/tests/: CMakeLists.txt  CiderAggHashTableTest.cpp  CiderAggSpillBufferMgrTest.cpp  CiderAllocatorTest.cpp  CiderArrowBatchTest.cpp  CiderBatchTest.cpp  CiderBitUtilsTest.cpp  CiderCompileModuleTest.cpp  CiderExceptionTest.cpp  CiderLogTest.cpp  CiderNewAggHashTableTest.cpp  CiderNewAggTest.cpp  CiderNewHashTableTest.cpp  CiderNongroupbyAggTest.cpp  CiderNongroupbyAggTestHelper.h  CiderRuntimeModuleJoinTest.cpp  CiderRuntimeModuleTest.cpp  CodeGeneratorTest.cpp  CompileWorkUnitTest.cpp  ExpressionEvalTest.cpp  StringHeapTest.cpp  Substrait2IRTest.cpp  TestHelpers.h
src/compression/: CMakeLists.txt
src/compression/benchmark/: CMakeLists.txt  CompressionBenchmark.cpp  ParquetBenchmark.cpp
src/compression/codec/: CMakeLists.txt  icl_codec.cpp  icl_codec.h  icl_codec_internal.h  igzip_codec.cpp
src/compression/common/: CMakeLists.txt
src/compression/test/: CMakeLists.txt  icl_codec_test.cpp
(+2333 files in other folders)
